--- a/Homework8.ipynb
+++ b/Homework8.ipynb
@@ -72,6 +72,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -178,6 +183,13 @@
     "F, TSFC, Fbar = calcThrust()\n",
     "\n",
     "print(\"Thrust: {:.6g} lbf, TSFC: {:.6g} lbm/lbf*hr, Fbar: {:.6g}\".format(F,TSFC,Fbar))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These results closesly match with my hand calculations. There are some slight differences, which I attribute to rounding errors as I did my work."
    ]
   },
   {
