--- a/Homework9.ipynb
+++ b/Homework9.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,20 +127,136 @@
     "\n",
     "Ta = 420.77 #R\n",
     "Pa = 4.893503 #psia\n",
+    "\n",
+    "R = 53.35 #gas constant\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thrust: 23554.94 lbf\n",
+      "TSFC: 2.16976 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 25716.84 lbf\n",
+      "TSFC: 1.986594 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 23942.79 lbf\n",
+      "TSFC: 2.132465 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 26758.77 lbf\n",
+      "TSFC: 1.909975 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 23537.62 lbf\n",
+      "TSFC: 2.162434 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 24297.88 lbf\n",
+      "TSFC: 2.103418 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 24129.3 lbf\n",
+      "TSFC: 2.118113 lbm/lbf hr\n",
+      "\n",
+      "Thrust: 24028.76 lbf\n",
+      "TSFC: 2.126975 lbm/lbf hr\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(24028.764238235657), np.float64(2.1269749539545275))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#main code\n",
     "\n",
     "def calcThrust(etaC=etaC,etaF=etaF,etaT=etaT,etaB=etaB,piB=piB,piD=piD,etaN=etaN):\n",
+    "    #ambient\n",
+    "    aa = np.sqrt(kA*R*32.17*Ta)\n",
+    "    ua = Ma*aa\n",
+    "    Tta = Ta * (1+(kA-1)/2*Ma**2)\n",
+    "    Pta = Pa * (1+(kA-1)/2*Ma**2)**(kA/(kA-1))\n",
     "\n",
-    "    #"
+    "    #duct\n",
+    "    Pt2 = Pta*piD\n",
+    "    Tt2 = Tta\n",
+    "\n",
+    "    #compressor\n",
+    "    Pt3 = Pt2*piC\n",
+    "    Tt3prime = Tt2 * piC**((kC-1)/kC)\n",
+    "    Tt3 = (Tt3prime - Tt2)/etaC + Tt2\n",
+    "\n",
+    "    #combustor\n",
+    "    Pt4 = Pt3*piB\n",
+    "    mdot_f = (mdot*CpB*(Tt4-Tt3))/(deltaH*etaB - CpB*Tt4)\n",
+    "\n",
+    "    f = mdot_f/mdot\n",
+    "\n",
+    "    #fan\n",
+    "    Pt7 = Pt2*piF\n",
+    "    Tt7prime = Tt2 * piF**((kF-1)/kF)\n",
+    "    Tt7 = (Tt7prime - Tt2)/etaF + Tt2\n",
+    "\n",
+    "    #turbine\n",
+    "    Tt5 = Tt4 - (mdot*CpC*(Tt3-Tt2) + alpha*mdot*CpF*(Tt7-Tt2))/(etaM*CpT*(mdot + mdot_f)) #something seems slightly different than hand calcs\n",
+    "    Pt5 = Pt4 * (1 - ((1 - (Tt5/Tt4))/etaT))**(kT/(kT-1))\n",
+    "\n",
+    "    #mixer\n",
+    "    Tt7_5 = Tt7\n",
+    "    Pt7_5 = Pt5\n",
+    "    Tt5_5 = ((1+f) * CpMC*Tt5 + sigma*alpha*CpMu*Tt7_5) / ((1+f)*CpMC + sigma*alpha*CpMu)\n",
+    "    Pt5_5 = Pt5 * piM\n",
+    "\n",
+    "    #afterburner\n",
+    "    Pt6 = Pt5_5*piAb\n",
+    "    mdot_fab = ((mdot + mdot_f + alpha*sigma*mdot)*CpAb*(Tt6 - Tt5_5)) / (deltaH * etaAb - CpAb*Tt6)\n",
+    "    fab = mdot_fab/mdot\n",
+    "\n",
+    "    #primary nozzle\n",
+    "    P8 = Pa\n",
+    "    T8prime = Tt6 * (P8/Pt6) ** ((kN - 1)/kN)\n",
+    "    T8 = Tt6 - etaN * (Tt6 - T8prime)\n",
+    "    a8 = (kN*R*32.17*T8)**(1/2)\n",
+    "    M8 = np.sqrt((1/(etaN * (P8/Pt6) ** ((kN - 1)/kN) + 1 - etaN)-1)*(2/(kN-1)))\n",
+    "    u8 = a8*M8\n",
+    "\n",
+    "    #fan nozzle\n",
+    "    P9 = Pa\n",
+    "    T9prime = Tt7 * (P9/Pt7) ** ((kFN - 1)/kFN)\n",
+    "    T9 = Tt7 - etaFN*(Tt7 - T9prime)\n",
+    "    a9 = (kFN*R*32.17*T9) ** (1/2)\n",
+    "    M9 = np.sqrt((1/(etaFN * (P9/Pt7) ** ((kFN - 1)/kFN) + 1 - etaFN)-1)*(2/(kFN-1)))\n",
+    "    u9 = a9*M9\n",
+    "\n",
+    "    #thrust\n",
+    "    thrust = (mdot*(1 + f + alpha*sigma + fab)*u8 - mdot*(1 + alpha*sigma)*ua + mdot*alpha*(1-sigma)*(u9 - ua))/32.17\n",
+    "    TSFC = (mdot_f + mdot_fab)/thrust * 3600\n",
+    "    \n",
+    "    print(\"Thrust: {:.7g} lbf\".format(thrust))\n",
+    "    print(\"TSFC: {:.7g} lbm/lbf hr\".format(TSFC))\n",
+    "    print(\"\")\n",
+    "\n",
+    "    return thrust, TSFC\n",
+    "\n",
+    "calcThrust()\n",
+    "calcThrust(etaC = 0.97)\n",
+    "calcThrust(etaF = 0.97)\n",
+    "calcThrust(etaT = 0.97)\n",
+    "calcThrust(etaB = 0.97)\n",
+    "calcThrust(piB = 0.97)\n",
+    "calcThrust(piD = 0.97)\n",
+    "calcThrust(etaN = 0.97)\n"
    ]
   }
  ],
